- Implement grouping by item types.

*****************
* Release 0.2.7 *
*****************
[Bugfix, NOT_STARTED]
- Move data to MySQL DB.
- Automate deployment.

*****************
* Release 0.2.6 *
*****************
[Bugfix, NOT_STARTED]
- Move data to MySQL DB.

*****************
* Release 0.2.5 *
*****************
[Bugfix, NOT_STARTED]
- Implement notifications in the app.
- Add testing.

*****************
* Release 0.2.4 *
*****************
[Bugfix, IN_PROGRESS, planned_date=5/17/2020]
- Add Exception handling.
- Implement fancy logging.
- Make titles in the headers more consistent.

*****************
* Release 0.2.3 *
*****************
[Bugfix, COMPLETED, release_date=5/11/2020]
+ Implement multiple orders.
+ Adjust height in custom banners.
+ Create a custom header on each page.
+ Add Refresh button on each page.
+ Change RemoveItem icons to crosses.
+ Fix CopyToClipboard button on each page.
+ Fix hover when an user click any image in the navbar.
+ Fix tight navbar on the About and Release pages.
+ Fix OrderNumber title in the navbar on the Item and Order page.

*****************
* Release 0.2.2 *
*****************
[Bugfix, COMPLETED, release_date=5/10/2020]
+ Fix issues related to long comments on the Order page.
+ Fix issues related to long names for items on the Order page.
+ Add validation for editable fields on the Item page.

*****************
* Release 0.2.1 *
*****************
[Bugfix, COMPLETED, release_date=5/8/2020]
+ Add spinners for time-consuming ajax requests.
+ Fix enabled RemoveAll button when item list is empty on the Order page.
+ Add RemoveCompleted button on the Order page.
+ Add OrderPage link on the Item page.
+ Add AllCompleted banner on the Item page.

*****************
* Release 0.2.0 *
*****************
[Minor, COMPLETED, release_date=5/6/2020]
+ Make adaptive pages by using Bootstrap 4.
+ Send ajax request when any item is added on the Item page.
+ Clean fields after adding the items on the Item page.